v19.0/enums/GC.Spread.Sheets.DataCharts.DataChartType.md
# Enumeration: DataChartType

[Sheets](../modules/GC.Spread.Sheets.md).[DataCharts](../modules/GC.Spread.Sheets.DataCharts.md).DataChartType

指定数据图表类型

## Table of contents

### Enumeration members

- [area](GC.Spread.Sheets.DataCharts.DataChartType.md#area)
- [bar](GC.Spread.Sheets.DataCharts.DataChartType.md#bar)
- [bubble](GC.Spread.Sheets.DataCharts.DataChartType.md#bubble)
- [candlestick](GC.Spread.Sheets.DataCharts.DataChartType.md#candlestick)
- [column](GC.Spread.Sheets.DataCharts.DataChartType.md#column)
- [donut](GC.Spread.Sheets.DataCharts.DataChartType.md#donut)
- [filledRadar](GC.Spread.Sheets.DataCharts.DataChartType.md#filledradar)
- [funnel](GC.Spread.Sheets.DataCharts.DataChartType.md#funnel)
- [line](GC.Spread.Sheets.DataCharts.DataChartType.md#line)
- [ohlc](GC.Spread.Sheets.DataCharts.DataChartType.md#ohlc)
- [percentStackedArea](GC.Spread.Sheets.DataCharts.DataChartType.md#percentstackedarea)
- [percentStackedBar](GC.Spread.Sheets.DataCharts.DataChartType.md#percentstackedbar)
- [percentStackedColumn](GC.Spread.Sheets.DataCharts.DataChartType.md#percentstackedcolumn)
- [pie](GC.Spread.Sheets.DataCharts.DataChartType.md#pie)
- [polarCoordinatesBar](GC.Spread.Sheets.DataCharts.DataChartType.md#polarcoordinatesbar)
- [polarCoordinatesStackedBar](GC.Spread.Sheets.DataCharts.DataChartType.md#polarcoordinatesstackedbar)
- [radar](GC.Spread.Sheets.DataCharts.DataChartType.md#radar)
- [radialStackedBar](GC.Spread.Sheets.DataCharts.DataChartType.md#radialstackedbar)
- [rangeArea](GC.Spread.Sheets.DataCharts.DataChartType.md#rangearea)
- [rangeBar](GC.Spread.Sheets.DataCharts.DataChartType.md#rangebar)
- [rangeColumn](GC.Spread.Sheets.DataCharts.DataChartType.md#rangecolumn)
- [rose](GC.Spread.Sheets.DataCharts.DataChartType.md#rose)
- [scatter](GC.Spread.Sheets.DataCharts.DataChartType.md#scatter)
- [stackedArea](GC.Spread.Sheets.DataCharts.DataChartType.md#stackedarea)
- [stackedBar](GC.Spread.Sheets.DataCharts.DataChartType.md#stackedbar)
- [stackedColumn](GC.Spread.Sheets.DataCharts.DataChartType.md#stackedcolumn)
- [sunburst](GC.Spread.Sheets.DataCharts.DataChartType.md#sunburst)
- [treemap](GC.Spread.Sheets.DataCharts.DataChartType.md#treemap)
- [waterfall](GC.Spread.Sheets.DataCharts.DataChartType.md#waterfall)

## Enumeration members

### <a id="area" name="area"></a> area

• **area** = `"Area"`

面积图

___

### <a id="bar" name="bar"></a> bar

• **bar** = `"Bar"`

条形图

___

### <a id="bubble" name="bubble"></a> bubble

• **bubble** = `"Bubble"`

气泡图

___

### <a id="candlestick" name="candlestick"></a> candlestick

• **candlestick** = `"Candlestick"`

标识当前数据图表类型为蜡烛图（K线图）

___

### <a id="column" name="column"></a> column

• **column** = `"Column"`

柱状图

___

### <a id="donut" name="donut"></a> donut

• **donut** = `"Donut"`

环形图

___

### <a id="filledradar" name="filledradar"></a> filledRadar

• **filledRadar** = `"FilledRadar"`

填充雷达图

___

### <a id="funnel" name="funnel"></a> funnel

• **funnel** = `"Funnel"`

漏斗图

___

### <a id="line" name="line"></a> line

• **line** = `"Line"`

折线图

___

### <a id="ohlc" name="ohlc"></a> ohlc

• **ohlc** = `"OHLC"`

标识当前数据图表类型为OHLC图（开高低收图）

___

### <a id="percentstackedarea" name="percentstackedarea"></a> percentStackedArea

• **percentStackedArea** = `"PercentStackedArea"`

百分比堆叠面积图

___

### <a id="percentstackedbar" name="percentstackedbar"></a> percentStackedBar

• **percentStackedBar** = `"PercentStackedBar"`

百分比堆叠条形图

___

### <a id="percentstackedcolumn" name="percentstackedcolumn"></a> percentStackedColumn

• **percentStackedColumn** = `"PercentStackedColumn"`

百分比堆叠柱状图

___

### <a id="pie" name="pie"></a> pie

• **pie** = `"Pie"`

饼图

___

### <a id="polarcoordinatesbar" name="polarcoordinatesbar"></a> polarCoordinatesBar

• **polarCoordinatesBar** = `"PolarCoordinatesBar"`

极坐标条形图

___

### <a id="polarcoordinatesstackedbar" name="polarcoordinatesstackedbar"></a> polarCoordinatesStackedBar

• **polarCoordinatesStackedBar** = `"PolarCoordinatesStackedBar"`

极坐标堆叠条形图

___

### <a id="radar" name="radar"></a> radar

• **radar** = `"Radar"`

雷达图

___

### <a id="radialstackedbar" name="radialstackedbar"></a> radialStackedBar

• **radialStackedBar** = `"RadialStackedBar"`

径向堆叠条形图

___

### <a id="rangearea" name="rangearea"></a> rangeArea

• **rangeArea** = `"RangeArea"`

范围面积图

___

### <a id="rangebar" name="rangebar"></a> rangeBar

• **rangeBar** = `"RangeBar"`

范围条形图

___

### <a id="rangecolumn" name="rangecolumn"></a> rangeColumn

• **rangeColumn** = `"RangeColumn"`

范围柱状图

___

### <a id="rose" name="rose"></a> rose

• **rose** = `"Rose"`

玫瑰图

___

### <a id="scatter" name="scatter"></a> scatter

• **scatter** = `"Scatter"`

散点图

___

### <a id="stackedarea" name="stackedarea"></a> stackedArea

• **stackedArea** = `"StackedArea"`

堆叠面积图

___

### <a id="stackedbar" name="stackedbar"></a> stackedBar

• **stackedBar** = `"StackedBar"`

堆叠条形图

___

### <a id="stackedcolumn" name="stackedcolumn"></a> stackedColumn

• **stackedColumn** = `"StackedColumn"`

堆叠柱状图

___

### <a id="sunburst" name="sunburst"></a> sunburst

• **sunburst** = `"Sunburst"`

旭日图

___

### <a id="treemap" name="treemap"></a> treemap

• **treemap** = `"Treemap"`

树形图

___

### <a id="waterfall" name="waterfall"></a> waterfall

• **waterfall** = `"Waterfall"`

标识当前数据图表类型为瀑布图
